# SFMLveryBasic

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  nonplayer.cpp  nonplayer.h
